Fix AppBar to top of screen, visible all the time.

--- a/src/App.scss
+++ b/src/App.scss
@@ -31,7 +31,7 @@
   display: grid;
 
   width: 100%;
-  margin: 2vw auto;
+  margin: calc(2vw + 64px) auto 2vw auto;
   max-width: var(--content-width);
 
   grid-template-columns: repeat(var(--columns), 1fr);
